# star-pass

./: .bump  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/linters/: .eslintrc.yml  .jscpd.json  .python-lint
.github/workflows/: lint-files.yml  pytest.yml  static-code-analysis.yml
app/: __init__.py  __main__.py  __version__.py
app/_standalone/: delete_bulk_users.py
app/schema/: amplify.shifts.schema.json
app/star_pass/: __init__.py  _arg_parser.py  _defaults.py  _helpers.py  _logging.py  amplify_responses.py  amplify_shifts.py  gcal_data.py  helpers.py  slack_notify.py  star_pass.py
app/star_pass/roster_sort/: roster_sort.py
data/csv/: 2024_august_03_buds.csv  2024_august_10_buds.csv  2024_august_woj_extra_scrimmage_shifts.csv  csv_shifts.csv
models/: shift_info.yml
requirements/: requirements.txt  requirements_dev.txt  requirements_pytest.txt  requirements_static_code_analysis.txt
tests/: conftest.py  test_amplify_responses.py  test_amplify_shifts.py  test_gcal_data.py  test_helpers.py  test_main.py  test_slack_notify.py
tests/fixtures/: shift_need_ids_expected.json
