# Python package configuration file
## https://packaging.python.org/en/latest/

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
  "setuptools-scm"
]

[project]
authors = [
  {name = "Breadpool", email = "breadpool@rosecityrollers.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Galaxy Digital Amplify volunteer management system administrators.",
  "Topic :: Galaxy Digital Amplify :: Volunteer Management :: Automation",
  "License :: OSI Approved :: Apache Software License",
  "Private :: Do Not Upload",
  "Programming Language :: Python :: 3.12"
]
dependencies = [
  "python_dotenv==1.2.2",
  "pandas==3.0.3",
  "python-Levenshtein==0.27.3",
  "thefuzz==0.22.1",
  "requests==2.34.2",
  "slack_sdk==3.43.0"
]
description = "Tool to automate manual volunteer management in Galaxy Digital Amplify."
dynamic = ["version"]
name = "star-pass"
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
star-pass = "app.__main__:main"

[project.urls]
Repository = "https://github.com/rcrderby/star-pass.git"

[tool.setuptools_scm]

[tool.setuptools.dynamic]
readme = {file = "README.md"}
version = {attr = "app.__version__"}

[tool.pytest.ini_options]
# Put the 'app' directory on sys.path so tests can `import star_pass...`
# without the ./app/__main__.py script-directory trick.
pythonpath = ["app"]
testpaths = ["tests"]
addopts = "--verbose"